Cilium/busyboxpod-egressgw.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: busybox
  name: busybox
spec:
  containers:
  - image: nginx
    name: nginx
    securityContext:
      capabilities:
        add:
          - NET_ADMIN  # Add the cap_net_admin capability
    resources: {}
  dnsPolicy: ClusterFirst
  nodeSelector:
    kubernetes.io/hostname: ip-192-168-149-253.ap-northeast-2.compute.internal
  restartPolicy: Always
status: {}
