Cilium/cnp_icmpv4v6.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "icmp-rule"
spec:
  endpointSelector:
    matchLabels:
      app: nginx
  egress:
  - icmps:
    - fields:
      - type: 8
        family: IPv4
      - type: 128
        family: IPv6
