Cilium/l7_policy_tls_sni.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l7-sni"
spec:
  description: L7 policy with TLS-SNI
  endpointSelector:
    matchLabels:
      org: empire
      class: mediabot
  egress:
  - toFQDNs:
    - matchName: "amit.cilium.rocks"
    toPorts:
    - ports:
      - port: "443"
        protocol: "TCP"
      serverNames:
      - "amit.cilium.rocks"
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
          - matchPattern: "*"
